# if-megaparsec

./: .gitignore  LICENSE  if.cabal  stack.yaml
src/: Main.hs
